# mocking-goose-local

./: .env.local.example  .gitignore  LOCAL_DEVELOPMENT.md  QUICKSTART_LOCAL.md  README.md  README_LOCAL.md  app.yaml  proxy_app.py  proxy_app_local.py  requirements.txt  run_local.sh  setup_local.sh
awesome-databricks-mcp/: README.md  config.yaml  pyproject.toml  run_mcp_stdio.py
awesome-databricks-mcp/prompts/: build_lakeview_dashboard.md  build_ldp_pipeline.md
awesome-databricks-mcp/scripts/: test_manually.py
awesome-databricks-mcp/server/: prompts.py
awesome-databricks-mcp/server/tools/: README.md  __init__.py  core.py  jobs_pipelines.py  lakeview_dashboard.py  layout_optimization.py  ldp.py  sql_operations.py  sql_warehouse.py  unity_catalog.py  utils.py  volumes.py  widget_specs.py
mock-and-roll/: .goosehints  pyproject.toml
mock-and-roll/config/: base.yml
mock-and-roll/config/environments/: dev.yml  prod.yml
mock-and-roll/src/config/: settings.py
mock-and-roll/src/core/: __init__.py  cli.py
mock-and-roll/src/examples/sales_demo/: main.py
mock-and-roll/src/examples/sales_demo/data/product_sales/: product_sales.csv
mock-and-roll/src/examples/sales_demo/data/user_profiles/: user_profiles.csv
