[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-and-roll"
version = "0.1.0"
description = "AI Generated Data Demo Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mimesis>=18.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
